# LabelLlama

./: .gitignore  AGENTS.md  Makefile  README.md  custom.css  marimo_custom.css  pyproject.toml  tmux.bash
.github_bck/workflows/: python-app.yml
academy/: slice.py
academy/pylib/: const.py  slice_box.py  slice_page.py  spin_box.py
args/: clean_lm_output_diode_geode.bash  compare_diode.bash  dwc_extract_gpt5.bash  extract_dwc.bash  get_text_diode.bash  gold_std_export.bash  gold_std_import.bash  gold_std_import_csv.bash  gold_std_insert.bash  gold_std_list.bash  gold_std_score_dwc.bash  gold_std_select.bash  gold_std_split.bash  miprov2_optimizer.bash  ocr_images.bash  postprocess_1000_test.bash  preprocess_dwc.bash  preprocess_dwc_display.bash  preprocess_dwc_write.bash  run_lm_1000_test.bash  run_lm_diode.bash  run_lm_diode_local.bash  run_lm_extract_cas_gold_1.bash  run_lm_fields_cas_dwc_2.bash  run_lm_fields_cas_gold_3.bash  run_lm_herbarium_gold.bash  server_llama_cpp.bash
args/cas/: ocr_images_1000_test.bash  parse_text_1000_test.bash  parse_text_cas_gold.bash
args/diode/: clean_lm_output_diode.bash  compare_diode.bash  ocr_images_diode.bash  run_lm_diode.bash  run_lm_diode_local.bash
args/herbarium/: clean_llm_output.bash  clean_llm_output_gpt_nano.bash  clean_llm_output_qwen.bash  compare_output_gbif.bash  compare_output_images_1.bash  compare_output_winner.bash  extract_info.bash  extract_info_one.bash  extract_info_one_model.bash  ocr_images.bash  ocr_images_phenobase.bash  parse_text_debug.bash  parse_text_gemma4_12b.bash  parse_text_gemma4_26b-a4b.bash  parse_text_gemma4_31b.bash  parse_text_gpt_nano.bash  parse_text_qwen.bash  parse_text_qwen36_27b.bash  parse_text_qwen36_35b_a3b.bash  util_get_gbif_data.bash  util_image_download.bash
args/notebooks/: get_text_ocr_ersatz.py  ocr_images_ersatz.py
args/ocr_tests/: ocr_test.bash
args/scripts/: clean_lm_output_diode_geode.bash  get_text_1000_test.bash  get_text_bug_hunt.bash  get_text_diode.bash  get_text_insects.bash  gold_std_import_csv.bash  gold_std_import_json.bash  gold_std_score_dwc.bash  postprocess_1000_test.bash  postprocess_fields.bash  postprocess_gold_std.bash  postprocess_insects.bash  run_lm_1000_test.bash  run_lm_diode.bash  run_lm_extract_cas_gold.bash  run_lm_fields_cas_dwc_2.bash  run_lm_herbarium_gold.bash  run_lm_insect.bash  run_lm_insects.bash
demo/: get_text_demo.bash  lm_extracts.csv  lm_extracts_post.csv  ocr_demo_docs.csv  postprocess_demo.bash  run_lm_demo.bash
docs/: NfN_Coordinate_Info.odt  diode_overview.md  large_pivot.sql  lightning_bug.md  llama.cpp.bash  pivot_cas.sql  rename.sql  rocm.bash  union_all.sql
llama/: annotate_fields.py  annotate_fields_oopsie.py  annotate_gold.py  build_char_sub_matrix.py  clean_llm_output.py  compare_output.py  compare_output_gbif.py  compare_output_gold.py  compare_output_majority.py  compare_output_new.py  compare_output_winner.py  compare_to_gold.py  cut_labels.py  extract_dwc.py  extract_info.py  extract_info_one.py  extract_info_one_model.py  extract_info_two.py  extract_info_two_models.py  fix_annotations.py  format_ocr_output.py  gepa_optimizer.py  get_text.py  gold_std.py  index.md  label_labels.py  miprov2_optimizer.py  modify_annotated_fields.py  ocr_compare.py  ocr_images.py  oopsie_daisy.py  outline_labels.py  parse_and_clean_text.py  parse_text.py  postprocess.py  postprocess_fields.py  preprocess_dwc.py  rebuild_label_outlines.py  run_llm.py  run_lm.py  (+17 more)
llama/agents/: single_image_agent.py
llama/calculated/: calculated_field.py
llama/common/: args_util.py  const.py  db_util.py  fix_values.py  io_util.py  log.py  preprocess.py  str_util.py
llama/data_formats/: bug_label.py  data_util.py  dwc_extract.py  herbarium_label.py  herbarium_sheet.py  image_slice.py  image_with_labels.py  label_types.py  lightning_bug_label.py  specimen_types.py
llama/extractors/: herbarium_extractor.py
llama/fields/: abundance.py  all_fields.py  associated_taxa.py  base_field.py  collector.py  collector_number.py  country.py  county.py  date_identified.py  elevation.py  event_date.py  extracted_field.py  family.py  field_registry.py  field_util.py  flower_color.py  flower_present.py  fruit_color.py  fruit_present.py  geodetic_datum.py  habit.py  habitat.py  herbarium_fields.py  identified_by.py  infraspecific_epithet.py  infraspecific_name_authorship.py  insect_fields.py  latitude.py  leaf_margin.py  leaf_shape.py  locality.py  longitude.py  municipality.py  occurrence_remarks.py  plant_height.py  plant_size.py  scientific_name.py  scientific_name_authorship.py  state_province.py  trs.py  (+1 more)
llama/fixes/: fix_db.py
llama/label_types/: herbarium_label.py  label_types.py  lightning_bug_label.py
llama/line_align/: align.py  char_sub_matrix.py  char_sub_matrix.sqlite  label_builder.py  label_transformer.py
llama/llm/: bug_label.py  dwc_module.py  herbarium_sheet.py  insect_label.py  signature_registry.py
llama/lm/: all_signatures.py  cas_v1.py  dwc_module.py  herbarium_sheet.py  preprocess.py  signature_registry.py
llama/model_data/: label_types.py
llama/model_utils/: extract_dwc.py  model_utils.py  ocr_utils.py
llama/modules/: dwc_extract.py
llama/notebooks/: get_text.mo.py  run_lm.mo.py
llama/ocr/: all_ocr_parameters.py  all_ocr_prompts.py
llama/parse1_text/: all_signatures.py  cas_v1.py  dwc_extract.py  dwc_module.py  herbarium_sheet.py
llama/parse2_fields/: all_actions.py  all_signatures.py  associated_taxa.py  country.py  county.py  date_identified.py  elevation.py  event_date.py  family.py  field_extract.py  geodetic_datum.py  habitat.py  identified_by.py  infraspecific_epithet.py  latitude.py  locality.py  (+13 more)
notebooks/: diode_trial_run.py  extract_dwc.ipynb  extract_dwc_herbarium.py  georeference_diode.py  lightning_bug_trial_run.py  ocr_images.py  ocr_images_herbarium.py  ocr_lightning_bug.ipynb  show_ocr.ipynb  try_chandra_ocr.py
prompts/: README.md  diode_geode.md  diode_v1.md  elevation.md  herbarium.md  herbarium_v1.md  herbarium_v2.md  ocr.md  ocr_v2.md  trs.md  utm.md
tests/: setup.py  test_tokenizer.py
(+587 files in other folders)
