[build-system]
requires = ["uv_build>=0.8.12"]
build-backend = "uv_build"

[project]
name = "LabelLlama"
version = "0.1.0"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "raphael.lafrance@gmail.com" }]
copyright = "Copyright (C) 2025 by Raphael LaFrance"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "dspy>=3.0.4",
    "duckdb>=1.4.1",
    "flet[all]>=0.28.3",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "levenshtein>=0.27.3",
    "litellm>=1.79.3",
    "llama-cpp-python>=0.3.16",
    "lmstudio>=1.5.0",
    "marimo>=0.18.1",
    "msgspec>=0.20.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "sqlglot>=28.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
    "uv-build>=0.9.5",
]

[tool.flet.app]
path = "llama"

[tool.marimo.display]
custom_css = ["marimo_custom.css"]

[tool.uv.build-backend]
module-root = "."
module-name = "llama"

[tool.ruff]
exclude = ["notebooks/*"]

show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

select = ["ALL"]

ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # Trailing comma missing
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in public method
    "D107",    # Missing docstring in public __init__
    "D203",    # 1 blank line required before class docstring
    "D205",    # 1 blank line required between summary line and description
    "D212",    # Multi-line docstring summary should start at the first line
    "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
    "DTZ011",  # datetime.date.today() used
    "ERA001",  # Remove commented-out code
    "FIX002",  # Line contains TODO
    "G004",    # Logging statement uses f-string
    "LOG015",  # Use own logger instead
    "N818",    # Exception name {name} should be named with an Error suffix
    "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT009",   # Use a regular assert instead of unittest-style {assertion}
    "RET504",  # Unnecessary assignment to {name} before return statement
    "RUF001",  # Ambiguous quote character in string
    "RUF002",  # Docstring contains ambiguous `‘`
    "S602",    # subprocess` call with `shell=True` identified, security issue
    "S607",    # Starting a process with a partial executable path
    "S608",    # Possible SQL injection vector through string-based query construction
    "SIM114",  # Combine if branches using logical or operator
    "SIM905",  # Consider using a list literal instead of `str.split`
    "SLF001",  # Private member accessed: {access}
    "T201",    # print found
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link on the line following this TODO
]

[tool.ty.rules]
non-subscriptable = "ignore"
