[build-system]
requires = ["uv_build>=0.11.13"]
build-backend = "uv_build"

[project]
name = "LabelLlama"
version = "0.2.2"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "raphael.lafrance@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "avif[pillow]>=2026.4.7",
  "jinja2>=3.1.6",
  "levenshtein>=0.27.3",
  "lxml>=6.1.1",
  "markdownify>=1.2.2",
  "odfpy>=1.4.1",
  "pandas>=3.0.3",
  "pillow>=12.0.0",
  "pyarrow>=22.0.0",
  "pygbif>=0.6.6",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.3",
  "rapidfuzz>=3.14.3",
  "requests>=2.34.2",
  "rich>=15.0.0",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "ruff>=0.15.15",
  "uv-build>=0.11.18",
]

[tool.uv.build-backend]
module-root = "."
module-name = "llama"

[tool.ruff]
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "C901",    # Function is too complex (n > 10)
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D205",    # 1 blank line required between summary line and description
  "D212",    # Multi-line docstring summary should start at the first line
  "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
  "DTZ011",  # datetime.date.today() used
  "ERA001",  # Remove commented-out code
  "EM102",   # Exception must not use an f-string literal, assign to variable first
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "LOG015",  # Use own logger instead
  "N815",    # Variable in class scope should not be mixedCase -- I prefer snake case too
  "N999",    # Invalid module name
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements (x > 50)
  "PLR2004", # Magic value used in comparison
  "PLW0603", # Using the global statement to update {name} is discouraged
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # String contains ambiguous character
  "S101",    # Use of assert detected
  "T201",    # print found
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
  "TRY003",  # Avoid specifying long messages outside the exception class
]
